k8s/ratelimit-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kickb-dev-ratelimit
  namespace: default
spec:
  rateLimit:
    average: 50
    burst: 20
    sourceCriterion:
      ipStrategy:
        depth: 0
